k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pogosyan-fastapi
  namespace: pogosyan
spec:
  type: ClusterIP
  selector:
    app: pogosyan-fastapi
  ports:
    - name: http
      port: 80
      targetPort: http
