k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pogosyan-fastapi
  namespace: pogosyan
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: pogosyan-fastapi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pogosyan-fastapi
                port:
                  number: 80
